# data-structures-and-algorithms

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  CodingGuidelines.md  DIRECTORY.md  Doxyfile  LICENSE  readme.md  rename_files.ps1
.github/workflows/: ci.yml
docs/: 01-项目总览.md  02-学习路径与参考资料.md  04-数据结构详解.md  05-算法详解.md  06-代码导读与开发指南.md  09-线性表模块.md  10-栈与队列模块.md  11-树模块.md  12-图模块.md  13-哈希表模块.md  14-排序算法模块.md  15-搜索算法模块.md  16-字符串算法模块.md  17-高级算法模块.md  19-软件工程图集.md  代码导读与开发指南.md  代码质量优化.md  哈希表模块.md  图模块.md  字符串算法模块.md  学习路径与参考资料.md  技术栈与工具链指南.md  排序算法模块.md  搜索算法模块.md  数据结构详解.md  栈与队列模块.md  树模块.md  算法详解.md  线性表模块.md  项目总览.md  项目演进报告.md  项目结构优化.md  高级算法模块.md
docs/engineering/: 01-项目总览.md  02-技术栈与工具链指南.md  03-代码导读与开发指南.md  04-项目演进报告.md  05-项目结构优化.md  06-代码质量优化.md  07-软件工程图集.md
docs/learning/: 00-快速开始.md  01-学习路径与参考资料.md  02-数据结构详解.md  03-算法详解.md  04-线性表模块.md  05-栈与队列模块.md  06-树模块.md  07-图模块.md  08-哈希表模块.md  09-排序算法模块.md  10-搜索算法模块.md  11-字符串算法模块.md  12-高级算法模块.md
python/: dp_verify.py  graph_visualization.py  hash_analysis.py  search_comparison.py  sorting_comparison.py
python/algorithms/: __init__.py  run_all.py
python/algorithms/backtracking/: L34_combinations.py  L34_n_queens.py  __init__.py  permutations.py  subset_sum.py
python/algorithms/bit_manipulation/: __init__.py  bit_tricks.py
python/algorithms/data_structures/: L01_sequential_list.py  L05_doubly_linked_list.py  L07_stack.py  L08_queue.py  L14_trie.py  L15_max_heap.py  L16_segment_tree.py  L17_fenwick_tree.py  L18_hash_table_chaining.py  L19_bloom_filter.py  L20_lru_cache.py  L22_adjacency_list.py  __init__.py  adjacency_matrix.py  avl_tree.py  binary_search_tree.py  binary_tree.py  circular_linked_list.py  hash_table_open_addressing.py  min_heap.py  queue.py  singly_linked_list.py  skip_list.py  stack.py  union_find.py
python/algorithms/divide_and_conquer/: L33_closest_pair.py  L33_max_subarray_dc.py  __init__.py
python/algorithms/dynamic_programming/: L31_edit_distance.py  L31_fibonacci.py  (+10 more)
python/tests/: test_data_structures.py  test_dynamic_programming.py  test_graph.py  test_math_algorithm.py  test_string_algorithm.py
src/advanced_algorithm/: CMakeLists.txt
src/advanced_algorithm/dynamic_programming/: 31_climbing_stairs.cpp  31_fibonacci.cpp  31_knapsack_01.cpp  31_lcs_dp.cpp  31_lcs_dp.h  31_lcs_dp_main.cpp  31_lis.cpp  31_matrix_chain.cpp  31_matrix_chain.h  31_matrix_chain_main.cpp  CMakeLists.txt  climbing_stairs.cpp  coin_change.cpp  edit_distance.cpp  fibonacci.cpp  house_robber.cpp  knapsack_01.cpp  knapsack_complete.cpp  lis.cpp  max_subarray.cpp
src/bit_manipulation/: 35_bit_manipulation.cpp  35_bit_manipulation.h  35_bit_manipulation_main.cpp  CMakeLists.txt  bit_manipulation.cpp  bit_manipulation.h  bit_manipulation_main.cpp
src/cache/: CMakeLists.txt
src/graph/: CMakeLists.txt
src/hash_table/: 18_hash_table_chaining.c  18_hash_table_chaining.h  18_hash_table_main.c  18_hash_table_open_addressing.c  CMakeLists.txt  hash_table_chaining.c  hash_table_chaining.h  hash_table_main.c  hash_table_open_addressing.c  hash_table_open_addressing.h
src/heap/: CMakeLists.txt
src/linear_list/: CMakeLists.txt
src/linear_list/sequential_list/: 01_basic_sequential_list.cpp  01_menu_demo.cpp  01_sequential_list_dahua_v1.c  01_sequential_list_dahua_v2.c  01_sequential_list_dahua_v3.c  01_sequential_list_dahua_v4.c  01_sequential_list_demo.cpp  01_sequential_list_v1.cpp  01_sequential_list_v2.c  01_sequential_list_v3.cpp  01_setup_list.cpp  01_static_sequential_list.cpp  01_static_sequential_list_v2.cpp  01_static_sequential_list_v4.cpp  01_static_sequential_list_v5.cpp  CMakeLists.txt  basic_sequential_list.cpp  menu_demo.cpp  sequential_list_dahua_v1.c  sequential_list_dahua_v2.c  sequential_list_dahua_v3.c  sequential_list_dahua_v4.c  sequential_list_demo.cpp  sequential_list_v1.cpp  sequential_list_v2.c  sequential_list_v3.cpp  setup_list.cpp  setup_list_v2.c  static_sequential_list.cpp  static_sequential_list_v2.cpp  static_sequential_list_v3.cpp  static_sequential_list_v4.cpp  static_sequential_list_v5.cpp
src/linear_list/singly_linked_list/: 04_singly_linked_list_v4.c  CMakeLists.txt  singly_linked_list_v1.c  singly_linked_list_v2.c  singly_linked_list_v3.cpp  singly_linked_list_v4.c
src/math/: 36_math_algorithms.cpp  36_math_algorithms.h  36_math_algorithms_main.cpp  CMakeLists.txt  math_algorithms.cpp  math_algorithms.h  math_algorithms_main.cpp
src/queue/: CMakeLists.txt
src/searching/: 03_binary_search.cpp  03_fibonacci_search.cpp  03_interpolation_search.cpp  03_linear_search.cpp  03_search_main.cpp  CMakeLists.txt  binary_search.cpp  fibonacci_search.cpp  interpolation_search.cpp  linear_search.cpp  search_common.h  search_main.cpp
src/sorting/: 02_bucket_sort.cpp  02_counting_sort.cpp  CMakeLists.txt  bucket_sort.cpp  counting_sort.cpp  radix_sort.cpp  sequential_list_sorting.cpp
src/stack/: CMakeLists.txt
src/stack/sequential_stack/: 07_sequential_stack_v3.cpp  CMakeLists.txt  sequential_stack_v1.cpp  sequential_stack_v2.cpp  sequential_stack_v3.cpp
src/string_algorithm/: 30_manacher.cpp  30_rolling_hash.cpp  30_string_main.cpp  30_z_algorithm.cpp  30_z_algorithm.h  30_z_algorithm_main.cpp  CMakeLists.txt  boyer_moore.cpp  brute_force_match.cpp  kmp.cpp  lcs.cpp  manacher.cpp  rabin_karp.cpp  rolling_hash.cpp  string_main.cpp
src/tree/: CMakeLists.txt
src/tree/binary_tree/: 10_binary_tree_test.cpp  10_binary_tree_v2.c  10_binary_tree_v3.cpp  10_binary_tree_v4.cpp  10_binary_tree_v5.cpp  10_binary_tree_v6.cpp  CMakeLists.txt  binary_tree_test.cpp  binary_tree_test_v2.cpp  binary_tree_v1.cpp  binary_tree_v2.c  binary_tree_v3.cpp  binary_tree_v4.cpp  binary_tree_v5.cpp  binary_tree_v6.cpp  bint.h  bint_v2.h  count_leaves.cpp  swap_subtree.cpp
tests/: CMakeLists.txt  self_test.h  test_bloom_filter.cpp  test_circular_queue.c  test_dp.cpp  test_fenwick_tree.cpp  test_graph.cpp  test_hash_table.c  test_lru_cache.cpp  test_searching.cpp  test_segment_tree.cpp  test_sorting.cpp  test_z_algorithm.cpp
(+195 files in other folders)
