cmake_minimum_required(VERSION 3.16)
project(data_structures_and_algorithms LANGUAGES C CXX)

set(CMAKE_C_STANDARD 17)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_compile_options(-Wall -Wextra)

enable_testing()

add_subdirectory(src/linear_list)
add_subdirectory(src/stack)
add_subdirectory(src/queue)
add_subdirectory(src/tree)
add_subdirectory(src/graph)
add_subdirectory(src/hash_table)
add_subdirectory(src/cache)
add_subdirectory(src/heap)
add_subdirectory(src/sorting)
add_subdirectory(src/searching)
add_subdirectory(src/string_algorithm)
add_subdirectory(src/advanced_algorithm)
add_subdirectory(src/bit_manipulation)
add_subdirectory(src/math)
add_subdirectory(tests)
