add_executable(03_searching 03_search_main.cpp)
target_compile_features(03_searching PRIVATE cxx_std_17)

add_executable(03_binary_search 03_binary_search.cpp)
target_compile_features(03_binary_search PRIVATE cxx_std_17)

add_executable(03_linear_search 03_linear_search.cpp)
target_compile_features(03_linear_search PRIVATE cxx_std_17)

add_executable(03_interpolation_search 03_interpolation_search.cpp)
target_compile_features(03_interpolation_search PRIVATE cxx_std_17)

add_executable(03_fibonacci_search 03_fibonacci_search.cpp)
target_compile_features(03_fibonacci_search PRIVATE cxx_std_17)
