file(GLOB SOURCES "*.cpp")
foreach(SOURCE ${SOURCES})
    file(STRINGS ${SOURCE} HAS_MAIN REGEX "int main")
    if(HAS_MAIN)
        get_filename_component(NAME ${SOURCE} NAME_WE)
        string(REPLACE "_main" "" BASE_NAME ${NAME})
        if(NAME MATCHES "_main$")
            add_executable(${BASE_NAME} ${SOURCE} ${CMAKE_CURRENT_SOURCE_DIR}/${BASE_NAME}.cpp)
            target_compile_features(${BASE_NAME} PRIVATE cxx_std_17)
        else()
            add_executable(${NAME} ${SOURCE})
            target_compile_features(${NAME} PRIVATE cxx_std_17)
        endif()
    endif()
endforeach()
