add_executable(sequential_list_v2 sequential_list_v2.c)
target_compile_features(sequential_list_v2 PRIVATE c_std_17)

add_executable(sequential_list_v1 sequential_list_v1.cpp)
target_compile_features(sequential_list_v1 PRIVATE cxx_std_17)

add_executable(sequential_list_v3 sequential_list_v3.cpp)
target_compile_features(sequential_list_v3 PRIVATE cxx_std_17)

add_executable(sequential_list_dahua_v1 sequential_list_dahua_v1.c)
target_compile_features(sequential_list_dahua_v1 PRIVATE c_std_17)

add_executable(sequential_list_dahua_v2 sequential_list_dahua_v2.c)
target_compile_features(sequential_list_dahua_v2 PRIVATE c_std_17)

add_executable(sequential_list_dahua_v3 sequential_list_dahua_v3.c)
target_compile_features(sequential_list_dahua_v3 PRIVATE c_std_17)

add_executable(sequential_list_dahua_v4 sequential_list_dahua_v4.c)
target_compile_features(sequential_list_dahua_v4 PRIVATE c_std_17)

add_executable(setup_list setup_list.cpp)
target_compile_features(setup_list PRIVATE cxx_std_17)

add_executable(setup_list_v2 setup_list_v2.c)
target_compile_features(setup_list_v2 PRIVATE c_std_17)

add_executable(static_sequential_list static_sequential_list.cpp)
target_compile_features(static_sequential_list PRIVATE cxx_std_17)

add_executable(static_sequential_list_v2 static_sequential_list_v2.cpp)
target_compile_features(static_sequential_list_v2 PRIVATE cxx_std_17)

add_executable(static_sequential_list_v3 static_sequential_list_v3.cpp)
target_compile_features(static_sequential_list_v3 PRIVATE cxx_std_17)

add_executable(static_sequential_list_v4 static_sequential_list_v4.cpp)
target_compile_features(static_sequential_list_v4 PRIVATE cxx_std_17)

add_executable(static_sequential_list_v5 static_sequential_list_v5.cpp)
target_compile_features(static_sequential_list_v5 PRIVATE cxx_std_17)

add_executable(basic_sequential_list basic_sequential_list.cpp)
target_compile_features(basic_sequential_list PRIVATE cxx_std_17)

add_executable(sequential_list_demo sequential_list_demo.cpp)
target_compile_features(sequential_list_demo PRIVATE cxx_std_17)

add_executable(menu_demo menu_demo.cpp)
target_compile_features(menu_demo PRIVATE cxx_std_17)
