add_executable(01_sequential_list_v2 01_sequential_list_v2.c)
target_compile_features(01_sequential_list_v2 PRIVATE c_std_17)

add_executable(01_sequential_list_v1 01_sequential_list_v1.cpp)
target_compile_features(01_sequential_list_v1 PRIVATE cxx_std_17)

add_executable(01_sequential_list_v3 01_sequential_list_v3.cpp)
target_compile_features(01_sequential_list_v3 PRIVATE cxx_std_17)

add_executable(01_sequential_list_dahua_v1 01_sequential_list_dahua_v1.c)
target_compile_features(01_sequential_list_dahua_v1 PRIVATE c_std_17)

add_executable(01_sequential_list_dahua_v2 01_sequential_list_dahua_v2.c)
target_compile_features(01_sequential_list_dahua_v2 PRIVATE c_std_17)

add_executable(01_sequential_list_dahua_v3 01_sequential_list_dahua_v3.c)
target_compile_features(01_sequential_list_dahua_v3 PRIVATE c_std_17)

add_executable(01_sequential_list_dahua_v4 01_sequential_list_dahua_v4.c)
target_compile_features(01_sequential_list_dahua_v4 PRIVATE c_std_17)

add_executable(01_setup_list 01_setup_list.cpp)
target_compile_features(01_setup_list PRIVATE cxx_std_17)

add_executable(01_setup_list_v2 01_setup_list_v2.c)
target_compile_features(01_setup_list_v2 PRIVATE c_std_17)

add_executable(01_static_sequential_list 01_static_sequential_list.cpp)
target_compile_features(01_static_sequential_list PRIVATE cxx_std_17)

add_executable(01_static_sequential_list_v2 01_static_sequential_list_v2.cpp)
target_compile_features(01_static_sequential_list_v2 PRIVATE cxx_std_17)

add_executable(01_static_sequential_list_v3 01_static_sequential_list_v3.cpp)
target_compile_features(01_static_sequential_list_v3 PRIVATE cxx_std_17)

add_executable(01_static_sequential_list_v4 01_static_sequential_list_v4.cpp)
target_compile_features(01_static_sequential_list_v4 PRIVATE cxx_std_17)

add_executable(01_static_sequential_list_v5 01_static_sequential_list_v5.cpp)
target_compile_features(01_static_sequential_list_v5 PRIVATE cxx_std_17)

add_executable(01_basic_sequential_list 01_basic_sequential_list.cpp)
target_compile_features(01_basic_sequential_list PRIVATE cxx_std_17)

add_executable(01_sequential_list_demo 01_sequential_list_demo.cpp)
target_compile_features(01_sequential_list_demo PRIVATE cxx_std_17)

add_executable(01_menu_demo 01_menu_demo.cpp)
target_compile_features(01_menu_demo PRIVATE cxx_std_17)
