add_executable(04_singly_linked_list_v1 04_singly_linked_list_v1.c)
target_compile_features(04_singly_linked_list_v1 PRIVATE c_std_17)

add_executable(04_singly_linked_list_v2 04_singly_linked_list_v2.c)
target_compile_features(04_singly_linked_list_v2 PRIVATE c_std_17)

add_executable(04_singly_linked_list_v3 04_singly_linked_list_v3.cpp)
target_compile_features(04_singly_linked_list_v3 PRIVATE cxx_std_17)

add_executable(04_singly_linked_list_v4 04_singly_linked_list_v4.c)
target_compile_features(04_singly_linked_list_v4 PRIVATE c_std_17)
