add_executable(07_sequential_stack_v1 07_sequential_stack_v1.cpp)
target_compile_features(07_sequential_stack_v1 PRIVATE cxx_std_17)

add_executable(07_sequential_stack_v2 07_sequential_stack_v2.cpp)
target_compile_features(07_sequential_stack_v2 PRIVATE cxx_std_17)

add_executable(07_sequential_stack_v3 07_sequential_stack_v3.cpp)
target_compile_features(07_sequential_stack_v3 PRIVATE cxx_std_17)
