add_executable(10_binary_tree_test 10_binary_tree_test.cpp)
target_compile_features(10_binary_tree_test PRIVATE cxx_std_17)

add_executable(10_binary_tree_test_v2 10_binary_tree_test_v2.cpp)
target_compile_features(10_binary_tree_test_v2 PRIVATE cxx_std_17)

add_executable(10_binary_tree_v1 10_binary_tree_v1.cpp)
target_compile_features(10_binary_tree_v1 PRIVATE cxx_std_17)

add_executable(10_binary_tree_v2 10_binary_tree_v2.c)
target_compile_features(10_binary_tree_v2 PRIVATE c_std_17)

add_executable(10_binary_tree_v3 10_binary_tree_v3.cpp 10_bint.h)
target_compile_features(10_binary_tree_v3 PRIVATE cxx_std_17)

add_executable(10_binary_tree_v4 10_binary_tree_v4.cpp 10_bint.h)
target_compile_features(10_binary_tree_v4 PRIVATE cxx_std_17)

add_executable(10_binary_tree_v5 10_binary_tree_v5.cpp)
target_compile_features(10_binary_tree_v5 PRIVATE cxx_std_17)

add_executable(10_binary_tree_v6 10_binary_tree_v6.cpp)
target_compile_features(10_binary_tree_v6 PRIVATE cxx_std_17)

add_executable(10_count_leaves 10_count_leaves.cpp)
target_compile_features(10_count_leaves PRIVATE cxx_std_17)

add_executable(10_swap_subtree 10_swap_subtree.cpp)
target_compile_features(10_swap_subtree PRIVATE cxx_std_17)
